[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = {version = "0.7.11",features = ["compat"]}
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"  # For password hashing
rand = "0.8"    # For generating salt
lettre = "0.11"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
chrono = "0.4.38"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
