[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = {version = "0.7.11",features = ["compat"]}
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"  # For password hashing
rand = "0.8"    # For generating salt